# archea

./: .gitmodules  App.cpp  App.h  CMakeLists.txt  Cargo.toml  EngineTimer.cpp  EngineTimer.h  README.md  System.cpp  System.h  main.cpp  shaders.cpp  shaders.h
.github/workflows/: build.yml
assets/: custom_material.wgsl
assets/shaders/: instancing.wgsl  instancing2.wgsl
octree/: BoundingBox.cpp  BoundingBox.h  Octree.cpp  Octree.h  OctreeNode.cpp  OctreeNode.h
scenes/: MainMenuScene.cpp  MainMenuScene.h  SandboxScene.cpp  SandboxScene.h
shaders/: fragment.glsl  fragment_chunk.glsl  fragment_normal_cube.glsl  fragment_old3.glsl  fragment_rect.glsl  plain_color.glsl  vertex.glsl  vertex_chunk.glsl  vertex_normal_cube.glsl  vertex_old3.glsl  vertex_rect.glsl  vertex_sprite.glsl
src/: main.rs  main_old.rs
src/engine/: check_position.rs  mod.rs
src/engine/plugins/: instancing.rs  mod.rs  position_updates.rs
src/engine/stuff/: mod.rs  vect3.rs
src/engine/systems/: chunk.rs  collision_system.rs  gravity_system.rs  lava_movement.rs  mod.rs  movement.rs  rock.rs  sand_movement.rs  sideways_movement.rs  steam.rs  temperature.rs  timestep_system.rs  unmovable_movement.rs  update_pixel_color.rs  water_movement.rs
src/engine/systems/pixels/: lava.rs  mod.rs  rock.rs  sand.rs  steam.rs  unmovable.rs  water.rs
systems/: CameraSystem.cpp  CameraSystem.h  GraphicsSystem.cpp  GraphicsSystem.h  ImGuiSystem.cpp  ImGuiSystem.h  InputSystem.cpp  InputSystem.h  ParticleData.cpp  ParticleData.h  ParticleSystem.cpp  ParticleSystem.h  ParticlesChunk.cpp  ParticlesChunk.h  Player.cpp  Player.h  SceneSystem.cpp  SceneSystem.h  Shapes.h  System.cpp  System.h  TestSingletonSystem.cpp  TestSingletonSystem.h  triangl_render.cpp  triangl_render.h
systems/gui/: GUI.cpp  GUI.h
systems/particle_types/: DebugParticle_Type.h  ErrorParticle_Type.h  LavaParticleType.h  ParticleMove.cpp  ParticleMove.h  ParticleType.cpp  ParticleType.h  ParticleTypeSystem.cpp  ParticleTypeSystem.h  SandParticle_Type.h  SteamParticleType.h  StoneParticleType.h  WaterParticle_Type.h
systems/particles_testing/: ParticleData.cpp  ParticleData.h
