[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bevy = "0.13.0"
bevy_panorbit_camera = "0.16.0"
bevy_rapier3d = "0.25.0"
rand = "0.9.0-alpha.0"

# Add this to your Cargo.toml
[profile.dev.package.bevy_rapier3d]
opt-level = 3