[package]
name = "archea"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bevy = "0.13.0"
bevy_mod_picking = "0.18.1"
bevy_panorbit_camera = "0.16.0"
ordered-float = "4.2.0"
rand = "0.9.0-alpha.0"
bytemuck = "1.14.3"
crossbeam-channel = "0.5.12"
bevy_voxel_world = "0.5.1"

[profile.dev.package."*"]
opt-level = 3
